clusters/pk3s/forgejo/ingressroute-https.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-https
  namespace: forgejo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fgit.watchtoken.org`)
      services:
        - name: forgejo-http
          port: 3000
  tls: {}
