clusters/pk3s/forgejo/ingressroute-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-public
  namespace: forgejo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`fgit.watchtoken.org`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: forgejo-http
          port: 3000
